fix div text overflow from breaking columns

--- a/public/style.css
+++ b/public/style.css
@@ -5453,3 +5453,7 @@ body:not(.movingUI) .drawer-content.maximized {
     color: var(--SmartThemeBodyColor);
     opacity: 0.7;
 }
+
+#advanced-formatting-button div[contenteditable="true"] {
+    overflow-wrap: anywhere;
+}
